# PDF2MD

./: .gitignore  README.md  pyproject.toml  requirements.txt
PDF2MD/models/: __init__.py  page.py
pdf2md/: cli.py  converter.py
pdf2md/extractors/: __init__.py  document_extractor.py  image_extractor.py  metadata_extractor.py  pdf_loader.py  text_extractor.py
pdf2md/models/: __init__.py  block.py  document.py  image.py  layout_item.py  page.py
pdf2md/processors/: __init__.py  font_analysis.py  heading_detector.py  image_placer.py  layout_analyzer.py  markdown_cleanup.py  reading_order.py
pdf2md/renderers/: __init__.py  caption_detector.py  image_helpers.py  markdown_renderer.py
pdf2md/utils/: file_utils.py  file_writer.py  logger.py  path_utils.py
tests/: test_converter.py  test_extractor.py  test_integration.py  test_renderer.py
