[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown converter with image extraction"
authors = [
    {name = "AlexNet Team"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pymupdf>=1.26.0",
    "click>=8.1.7",
    "tqdm>=4.66.0"
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]